@@ -38,6 +38,8 @@
 	12132,Red_Package: Turns you into x-mas clothes sprite for 10 minutes
 	--
 12/05
+	* Fixed Wings of Eagle Script (bSpeed no longer exists, it should be
+	  bSpeedRate) [Skotlex]
 	* Fixed Meteor Storm (Was not requiring thunderstorm level 1) [Kayla]
 12/04
 	* Updated SL_SOULLINKER to have inf2 = 512 (cant' cast on self) [Skotlex]
